finish logic and required features